--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "parses a javascript file and outputs a list of exported components",
   "main": "index.js",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "dev": "ava -w",
+    "pretest": "standard"
   },
   "repository": {
     "type": "git",
@@ -28,5 +30,14 @@
   "devDependencies": {
     "ava": "^0.17.0",
     "standard": "^8.6.0"
+  },
+  "dependencies": {
+    "babylon": "^6.14.1",
+    "traverse": "^0.6.6"
+  },
+  "ava": {
+    "files": [
+      "*.spec.js"
+    ]
   }
 }
