--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "get-exports-from-file",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "parses a javascript file and outputs a list of exports",
   "main": "index.js",
   "scripts": {
@@ -34,6 +34,8 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
+    "react-datepicker": "^0.39.0",
+    "react-intl": "^2.1.5",
     "standard": "^8.6.0"
   },
   "dependencies": {
