--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "get-exports-from-file",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "parses a javascript file and outputs a list of exports",
   "main": "index.js",
   "scripts": {
@@ -39,6 +39,7 @@
     "standard": "^8.6.0"
   },
   "dependencies": {
+    "babel-traverse": "^6.20.0",
     "babylon": "^6.14.1",
     "glob": "^7.1.1",
     "lodash.camelcase": "^4.3.0",
