--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "get-exports-from-file",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "parses a javascript file and outputs a list of exports",
-  "main": "index.js",
+  "main": "get-exports-from-file.js",
   "scripts": {
     "test": "ava",
     "dev": "ava -w",
@@ -34,7 +34,8 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
-    "react-datepicker": "^0.39.0",
+    "mobx": "^3.0.2",
+    "react-datepicker": "^0.40.0",
     "react-intl": "^2.1.5",
     "standard": "^8.6.0"
   },
@@ -53,5 +54,10 @@
       "babel-register"
     ],
     "babel": "inherit"
+  },
+  "standard": {
+    "ignore": [
+      "/fixtures/flow.js"
+    ]
   }
 }
