--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "get-exports-from-file",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "description": "parses a javascript file and outputs a list of exports",
   "main": "get-exports-from-file.js",
   "scripts": {
@@ -29,20 +29,20 @@
   },
   "homepage": "https://github.com/capaj/get-exports-from-file#readme",
   "devDependencies": {
-    "ava": "^0.17.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2016": "^6.16.0",
-    "babel-preset-es2017": "^6.16.0",
-    "mobx": "^3.0.2",
-    "react-datepicker": "^0.40.0",
-    "react-intl": "^2.1.5",
-    "standard": "^8.6.0"
+    "ava": "^0.19.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "mobx": "^3.1.15",
+    "react-datepicker": "^0.47.0",
+    "react-intl": "^2.3.0",
+    "standard": "^10.0.2"
   },
   "dependencies": {
-    "babel-traverse": "^6.20.0",
-    "babylon": "^6.14.1",
-    "glob": "^7.1.1",
+    "babel-traverse": "^6.25.0",
+    "babylon": "^6.17.3",
+    "glob": "^7.1.2",
     "lodash.camelcase": "^4.3.0",
     "mz": "^2.6.0"
   },
@@ -57,7 +57,7 @@
   },
   "standard": {
     "ignore": [
-      "/fixtures/flow.js"
+      "/fixtures/**"
     ]
   }
 }
